--- a/Clases/Sesión 05/01 - Recursión.ipynb
+++ b/Clases/Sesión 05/01 - Recursión.ipynb
@@ -103,8 +103,7 @@
    ],
    "source": [
     "def factorial_iterativo(n):\n",
-    "    contador = 1\n",
-    "    producto = 1\n",
+    "    contador, producto = 1, 1\n",
     "    while contador <= n:\n",
     "        producto *= contador\n",
     "        contador += 1\n",
@@ -198,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +206,7 @@
        "5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,81 +233,111 @@
     "\n",
     "Para calcular $fib(5)$, primero se calcula $fib(4)$ y $fib(3)$. Para $fib(4)$, calculamos $fib(3)$ y $fib(2)$. En general, como se puede apreciar en la figura, la evolución de las llamadas es similar a un árbol. Notemos que los nodos se dividen en 2 en cada nivel (excepto el final), lo que refleja el hecho que $fib$ se llama a si mismo dos veces cada vez que es llamada.\n",
     "\n",
-    "Este procedimiento es un ejemplo prototípico de recursión de árbol, pero lamentablemente es una pésima manera de calcular los números de Fibonacci, ya que realiza una gran cantidad de trabajo redundante. Notemos en la figura que el cálculo de $fib(3)$, casi la mitad del trabajo, está duplicado."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Thus, the process uses a number of steps that grows exponentially with the input. On the other hand, the space required grows only linearly with the input, because we need keep track only of which nodes are above us in the tree at any point in the computation. In general, the number of steps required by a tree-recursive process will be proportional to the number of nodes in the tree, while the space required will be proportional to the maximum depth of the tree.\n",
+    "Este procedimiento es un ejemplo prototípico de recursión de árbol, pero lamentablemente es una pésima manera de calcular los números de Fibonacci, ya que realiza una gran cantidad de trabajo redundante. Notemos en la figura que el cálculo de $fib(3)$, casi la mitad del trabajo, está duplicado. En general, el número de pasos necesario por un proceso con recursión de árbol, será proporcional al número de nodos del árbol (exponencial con respecto al parámetro de entrada), mientras que el espacio requerido será proporcional a la profundidad del árbol.  \n",
     "\n",
-    "We can also formulate an iterative process for computing the Fibonacci numbers. The idea is to use a pair of integers a and b, initialized to Fib(1) = 1 and Fib(0) = 0, and to repeatedly apply the simultaneous transformations\n",
+    "También es posible formular un proceso iterativo para calcular la secuencia de número de Fibonacci. La idea es usar pares de enteros $a$ y $b$, inicializados como $fib(0) = 0$ y $fib(1) = 1$, respectivamente, y aplicar repetidamente las transformaciones respectivas: \n",
     "\n",
     "\\begin{align*}\n",
-    "    producto &= contador \\cdot producto \\\\\n",
-    "    contador &= contador + 1\n",
+    "    a^t &= b^{t-1}\n",
+    "    b^t &= a^{t-1} + b^{t-1} \\\\\n",
     "\\end{align*}\n",
     "\n",
-    "It is not hard to show that, after applying this transformation n times, a and b will be equal, respectively, to Fib(n + 1) and Fib(n). Thus, we can compute Fibonacci numbers iteratively using the procedure\n",
+    "No es dificil demostrar que, después de aplicar estas transformaciones $n$ veces, $a$ y $b$ serán iguales a $fib(n)$ y $fib(n+1)$, respectivamente. Nuevamente, podemos escribir de manera directa este procedimiento en Python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fib_iterativo(n):\n",
+    "    a, b = 0, 1\n",
+    "    for contador in range(0, n):\n",
+    "        a, b = b, a+b\n",
+    "    return a\n",
     "\n",
-    "(define (fib n)\n",
-    "  (fib-iter 1 0 n))\n",
-    "\n",
-    "(define (fib-iter a b count)\n",
-    "  (if (= count 0)\n",
-    "      b\n",
-    "      (fib-iter (+ a b) a (- count 1))))\n",
-    "\n",
-    "This second method for computing Fib(n) is a linear iteration. The difference in number of steps required by the two methods -- one linear in n, one growing as fast as Fib(n) itself -- is enormous, even for small inputs.\n",
-    "\n",
-    "One should not conclude from this that tree-recursive processes are useless. When we consider processes that operate on hierarchically structured data rather than numbers, we will find that tree recursion is a natural and powerful tool.32 But even in numerical operations, tree-recursive processes can be useful in helping us to understand and design programs. For instance, although the first fib procedure is much less efficient than the second one, it is more straightforward, being little more than a translation into Lisp of the definition of the Fibonacci sequence. To formulate the iterative algorithm required noticing that the computation could be recast as an iteration with three state variables."
+    "fib_iterativo(5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It takes only a bit of cleverness to come up with the iterative Fibonacci algorithm. In contrast, consider the following problem: How many different ways can we make change of $ 1.00, given half-dollars, quarters, dimes, nickels, and pennies? More generally, can we write a procedure to compute the number of ways to change any given amount of money?\n",
+    "El método iterativo para calcular los números de Fibonacci es una iteración lineal. Esto implica que la diferencia entre la cantidad de pasos que toman las dos versiones del algoritmo es enorme (exponencias vs lineal), incluso para valores de entrada pequeños.\n",
     "\n",
-    "This problem has a simple solution as a recursive procedure. Suppose we think of the types of coins available as arranged in some order. Then the following relation holds:\n",
+    "A partir de esto, es fácil cometer el error de concluir que la recursión de árbol es inútil. A pesar de que generalmente puede resultar menos eficiciente, la recursión de árbol es sumamente práctica para entender y diseñar programas. Por ejemplo, a pesar de ser menos eficiente, la versión recursiva de Fibonacci es más clara e interpretable que la versión iterativa (es un traspaso directo de la definición formal de Fibonacci). Esta última requirió el uso y actualización de tres variables de estado diferentes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Un ejemplo más complejo\n",
+    "Finalizaremos esta sección con un ejemplo donde la recursión de árbol se transforma en un herramienta fundamental. Consideremos la siguiente pregunta: ¿Cuántas formas distintas de dar vuelto de \\$100 (cien pesos) existen, si se tienen monedas ilimitadas de \\$50, \\$10, \\$5 y \\$1? O si lo vemos de manera más general, ¿es posible escribir una función que calcule el número de formas en que es posible dar vuelto, dada una cantidad arbitraria de dinero?\n",
     "\n",
-    "The number of ways to change amount a using n kinds of coins equals\n",
+    "Como veremos, si resolvemos este problema utiizando un enfoque recursivo, la solución es bastante simple e intuitiva. Supongamos que tenemos los tipos de monedas disponibles ordenadas en algún orden particular. Observemos que la cantidad de formas en que puedo dar vuelto se puede dividir en dos grupos: las que no usan el primer tipo de moneda, y las que sí lo usan. De esta manera, el número total de formas de dar vuelto para cierta cantidad, es igual a la cantidad de formas de dar vuelto sin usar el primer tipo de moneda, más la cantidad de formas de dar vuelto usando el primer tipo de moneda. Pero esta última cantidad es igual a la cantidad de formas de dar vuelto para la cifra que resta, después de usar una moneda del primer tipo.\n",
     "\n",
-    "the number of ways to change amount a using all but the first kind of coin, plus\n",
-    "the number of ways to change amount a - d using all n kinds of coins, where d is the denomination of the first kind of coin.\n",
-    "To see why this is true, observe that the ways to make change can be divided into two groups: those that do not use any of the first kind of coin, and those that do. Therefore, the total number of ways to make change for some amount is equal to the number of ways to make change for the amount without using any of the first kind of coin, plus the number of ways to make change assuming that we do use the first kind of coin. But the latter number is equal to the number of ways to make change for the amount that remains after using a coin of the first kind.\n",
+    "Dado este último análisis, podemos decir que se cumple que la cantidad de formas de dar vuelto usando $n$ tipos de monedas es igual a:\n",
     "\n",
-    "Thus, we can recursively reduce the problem of changing a given amount to the problem of changing smaller amounts using fewer kinds of coins. Consider this reduction rule carefully, and convince yourself that we can use it to describe an algorithm if we specify the following degenerate cases:33\n",
+    "* la cantidad de formas de dar vuelto de \\$a usando todos salvo el primer tipo de moneda, más\n",
+    "* la cantidad de formas de dar vuelto de \\$(a-d) usando los $n$ tipos de monedas, donde d es el valor del primer tipo de moneda (el no usado en la primera regla).\n",
     "\n",
-    "If a is exactly 0, we should count that as 1 way to make change.\n",
-    "If a is less than 0, we should count that as 0 ways to make change.\n",
-    "If n is 0, we should count that as 0 ways to make change.\n",
-    "We can easily translate this description into a recursive procedure:\n",
+    "Así, podemos reducir de manera recursiva el problema original, al problema de dar vuelto para cantidades más pequeñas, usando menos tipos de monedas. Además, es necesario considerar las siguientes condiciones de borde:\n",
     "\n",
-    "(define (count-change amount)\n",
-    "  (cc amount 5))\n",
-    "(define (cc amount kinds-of-coins)\n",
-    "  (cond ((= amount 0) 1)\n",
-    "        ((or (< amount 0) (= kinds-of-coins 0)) 0)\n",
-    "        (else (+ (cc amount\n",
-    "                     (- kinds-of-coins 1))\n",
-    "                 (cc (- amount\n",
-    "                        (first-denomination kinds-of-coins))\n",
-    "                     kinds-of-coins)))))\n",
-    "(define (first-denomination kinds-of-coins)\n",
-    "  (cond ((= kinds-of-coins 1) 1)\n",
-    "        ((= kinds-of-coins 2) 5)\n",
-    "        ((= kinds-of-coins 3) 10)\n",
-    "        ((= kinds-of-coins 4) 25)\n",
-    "        ((= kinds-of-coins 5) 50)))\n",
+    "* si \\$a es exactamente 0, tenemos 1 forma de dar vuelto.\n",
+    "* si \\$a es menos que 0, tenemos 0 formas de dar vuelto.\n",
+    "* si $n$ (tipos de monedas) es 0, tenemos 0 formas de dar vuelto.\n",
     "\n",
-    "(The first-denomination procedure takes as input the number of kinds of coins available and returns the denomination of the first kind. Here we are thinking of the coins as arranged in order from largest to smallest, but any order would do as well.) We can now answer our original question about changing a dollar:\n",
+    "Teniendo estas reglas en consideración, podemos definir facilmente nuestra función recursiva:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "158"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calcular_formas_vuelto(cantidad, tipos_moneda):\n",
+    "    if cantidad == 0:\n",
+    "        return 1\n",
+    "    elif cantidad < 0 or len(tipos_moneda) == 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return calcular_formas_vuelto(cantidad,tipos_moneda[0:-1]) + \\\n",
+    "                calcular_formas_vuelto(cantidad-tipos_moneda[-1], tipos_moneda)\n",
     "\n",
-    "(count-change 100)\n",
-    "292\n",
-    "\n",
-    "Count-change generates a tree-recursive process with redundancies similar to those in our first implementation of fib. (It will take quite a while for that 292 to be computed.) On the other hand, it is not obvious how to design a better algorithm for computing the result, and we leave this problem as a challenge. The observation that a tree-recursive process may be highly inefficient but often easy to specify and understand has led people to propose that one could get the best of both worlds by designing a ``smart compiler'' that could transform tree-recursive procedures into more efficient procedures that compute the same result."
+    "tipos = [1, 5, 10, 50]\n",
+    "calcular_formas_vuelto(100, tipos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al igual que en el caso de la versión recursiva de Fibonacci, el cálculo de las formas de dar vuelto genera una recursión de árbol con cálculos redundantes. A pesar de esto, no es obvio como diseñar un algoritmo mejor para calcular la solución, menos aún obtener una versión iterativa, lo que da todavía más valor a la recursión de árbol."
    ]
   }
  ],
