--- a/Clases/Sesión 04/02 - Grafos.ipynb
+++ b/Clases/Sesión 04/02 - Grafos.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -388,20 +388,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Bastián dice que sus amigos son: {Daniela, Vicente, Felipe, Hernán, Hugo}\n",
-       "Hernán dice que sus amigos son: {Felipe, Hugo}\n",
+       "Bastián dice que sus amigos son: {Daniela, Hugo, Vicente, Hernán, Felipe}\n",
+       "Hernán dice que sus amigos son: {Hugo, Felipe}\n",
        "Daniela dice que sus amigos son: {Hernán, Vicente}\n",
        "Vicente dice que sus amigos son: {Daniela, Felipe}\n",
        "Hugo dice que sus amigos son: {Daniela, Hernán, Vicente}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -461,20 +461,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Bastián dice que sus amigos son: {Daniela, Vicente, Felipe, Hugo}\n",
+       "Bastián dice que sus amigos son: {Daniela, Hugo, Vicente, Felipe}\n",
        "Daniela dice que sus amigos son: {Vicente}\n",
        "Vicente dice que sus amigos son: {Daniela, Felipe}\n",
        "Hugo dice que sus amigos son: {Daniela, Vicente}\n",
        "Felipe dice que sus amigos son: {Daniela, Bastián}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -507,16 +507,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Bastián, Hugo, Vicente, Felipe, Daniela]"
+       "[Bastián, Felipe, Daniela, Vicente, Hugo]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "[Hugo, Daniela, Vicente, Felipe, Bastián]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "['F', 'A', 'G', 'D', 'E', 'C', 'B']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "['F', 'C', 'A', 'B', 'E', 'G', 'D']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
