correcciones menores a material de BD

--- a/Clases/Sesión 08/01 - Bases de datos relacionales.ipynb
+++ b/Clases/Sesión 08/01 - Bases de datos relacionales.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p>\n",
+    "<font size='5' face='Georgia, Arial'>IIC2115 - Programación como herramienta para la ingeniería</font><br>\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Bases de datos relacionales\n",
     "\n",
     "La cantidad de información disponible en la actualidad está literalmente explotando, y el valor de los datos como un activo en las distintas organizaciones es ampliamente reconocido. Para sacar el máximo provecho de esto, los usuarios necesitan herramientas que simplifiquen las tareas de administración de los datos y extraigan información útil de manera oportuna. De lo contrario, los datos pueden convertirse en un pasivo, con el costo de adquirirlo y gestionar excediendo con mucho el valor derivado de ella.\n",
@@ -15,7 +24,7 @@
     "\n",
     "Un sistema de gestión de bases de datos, o DBMS (DataBase Management System), es un software diseñado para ayudar a mantener y utilizar grandes volúmenes de datos. La necesidad de tales sistemas, así como su uso, está creciendo rápidamente. La alternativa al uso de un DBMS es almacenar los datos en archivos y escribir código específico para cada aplicación que los gestionará. Como pudimos apreciar en la actividad pasada, esto es es sin duda poco práctico, y debe evitarse.\n",
     "\n",
-    "Un modelo de datos es una colección de constructos de descripción de datos de alto nivel, que ocultan muchos detalles de almacenamiento de bajo nivel. Una de las principales ventajas de un DBMS es ,justamente, que permite al usuario definir los datos almacenados en términos de un modelo de datos. La mayoría de los DBMS se basan en el modelo de datos relacionales, en el que nos centramos en esta unidad.\n",
+    "Un modelo de datos es una colección de constructos de descripción de datos de alto nivel, que ocultan muchos detalles de almacenamiento de bajo nivel. Una de las principales ventajas de un DBMS es, justamente, que permite al usuario definir los datos almacenados en términos de un modelo de datos. La mayoría de los DBMS se basan en el modelo de datos relacionales, en el que nos centramos en esta unidad.\n",
     "\n",
     "\n",
     "## El modelo relacional\n",
@@ -91,6 +100,15 @@
     "\n",
     "La restricción de integridad que los estudiantes deben ser mayores de cierta edad, puede ser pensada como una restricción de dominio extendida, ya que estamos esencialmente definiendo el conjunto de valores de edad permisible más estrictamente de lo que es posible simplemente usando un dominio estándar de *INTEGER*. En general, sin embargo, se pueden especificar restricciones que van más allá de restricciones de dominios, llaves o llaves foráneas. Por ejemplo, podríamos requerir que cada estudiante cuya edad sea mayor que 18 debe tener un promedio mayor que 4. Los sistemas actuales de bases de datos relacionales apoyan tales restricciones generales en forma de restricciones y aserciones de tabla. Las restricciones de tablas se asocian con una sola tabla y se comprueban cada vez que se modifica dicha tabla. En contraste, las aserciones implican varias tablas y se comprueban cuando se modifica cualquiera de estas tablas."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
