--- a/Clases/Sesión 08/02 - SQL.ipynb
+++ b/Clases/Sesión 08/02 - SQL.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p>\n",
+    "<font size='5' face='Georgia, Arial'>IIC2115 - Programación como herramienta para la ingeniería</font><br>\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Structured Query Language (SQL)\n",
     "\n",
     "SQL es el lenguaje de bases de datos relacionales más ampliamente utilizado, tanto en la academia con en la industria. Aunque no todos los DBMS soportan el último estándar SQL completo (SQL1999), la mayoría de los productos soportan versiones muy cercanas en cuanto a los elementos discutidos en este curso.\n",
@@ -181,6 +190,15 @@
     "\n",
     "Existen multiples patrones de strings que pueden verificarse, no solo patrones de inicio. Más información sobre esto puede encontrarse [acá](https://www.w3schools.com/sql/sql_like.asp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
