--- a/Clases/Sesión 08/03 - Acceso a bases de datos con Python.ipynb
+++ b/Clases/Sesión 08/03 - Acceso a bases de datos con Python.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p>\n",
+    "<font size='5' face='Georgia, Arial'>IIC2115 - Programación como herramienta para la ingeniería</font><br>\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Acceso a bases de datos con Python\n",
     "\n",
     "A pesar de que existe una gran variedad de sistemas administradores de bases de datos (SySQL, SQL Server, PostreSQL), estos son en general programas pesados, con muchas funcionalidades, principalmente pensadas en aplicaciones grandes y no con fines académicos.\n",
