agregado ALTER a material de SQL

--- a/Clases/Sesión 08/02 - SQL.ipynb
+++ b/Clases/Sesión 08/02 - SQL.ipynb
@@ -30,9 +30,9 @@
     "\n",
     "### Creación y modificación de relaciones\n",
     "\n",
-    "El lenguaje SQL utiliza la palabra clave *table* para denotar una relación. Por simplicidad, sólo consideramos dominios que están incorporados en tipos de datos nativos, como INTEGER o STRING. La sentencia CREATE TABLE se utiliza para definir una nueva tabla. Para crear la relación Estudiantes, podemos usar la siguiente declaración:\n",
+    "El lenguaje SQL utiliza la palabra clave *table* para denotar una relación. Por simplicidad, sólo consideramos dominios que están incorporados en tipos de datos nativos, como INTEGER o STRING. La sentencia **CREATE TABLE** se utiliza para definir una nueva tabla. Para crear la relación Estudiantes, podemos usar la siguiente declaración:\n",
     "\n",
-    "> CREATE TABLE Estudiantes (id CHAR(30), nombre CHAR(20), login CHAR(20), edad (INTEGER), promedio (REAL))\n",
+    "> CREATE TABLE Estudiantes (id CHAR(30), nombre VARCHAR(20), login CHAR(20), edad (INTEGER), promedio (REAL))\n",
     "\n",
     "Las tuplas pueden insertarse utilizando el comando **INSERT**. Por ejemplo, para insertar una única tupla en la relación Estudiantes, podemos realizar la siguiente declaración:\n",
     "\n",
@@ -48,14 +48,20 @@
     "\n",
     "> UPDATE Estudiantes E SET E.edad = E.edad + 1, E.promedio = E.promedio - 1 WHERE E.id = 53688\n",
     "\n",
-    "Estos ejemplos ilustran algunos puntos importantes. Se aplica la cláusula WHERE primero y determina qué filas se van a modificar. La cláusula SET determina cómo se van a modificar estas filas. Si la columna que se está modificando es también utilizada para determinar el nuevo valor, el valor utilizado en la expresión en el lado derecho del igual (=) es el valor antiguo, es decir, antes de la modificación. \n",
+    "Este ejemplo ilustra algunos puntos importantes. Se aplica la cláusula WHERE primero y determina qué filas se van a modificar. La cláusula SET determina cómo se van a modificar estas filas. Si la columna que se está modificando es también utilizada para determinar el nuevo valor, el valor utilizado en la expresión en el lado derecho del igual (=) es el valor antiguo, es decir, antes de la modificación. \n",
+    "\n",
+    "Finalmente, si se busca modificar la estructura de una tabla, es posible hacerlo mediante el comando **ALTER**:\n",
+    "\n",
+    "> ALTER TABLE Estudiantes ADD COLUMN carrera VARCHAR(30)\n",
+    "\n",
+    "En el caso anterior, se agregó una nueva columna a la tabla Estudiantes, mientras que si se desea eliminar una columna ya existente, se debe intercambiar **ADD** por **DROP**, y eliminar la descripción del tipo de dato (VARCHAR(30) en este caso). Cabe destacar que en ambos casos, la aparición de la palabra clave **COLUMN** es opcional.\n",
     "\n",
     "\n",
     "### Restricciones de llave primaria\n",
     "\n",
-    "En SQL, podemos declarar que un subconjunto de las columnas de una tabla constituyen una llave, utilizando la restricción **UNIQUE**. A lo sumo, una de estas llaves candidatas puede ser declarada como primaria, utilizando la restricción **PRIMARY KEY**. Revisemos nuestra definición de la table Estudiante, especificando ahora la restricción de llave:\n",
+    "En SQL, podemos declarar que un subconjunto de las columnas de una tabla constituyen una llave, utilizando la restricción **UNIQUE**. A lo sumo, una de estas llaves candidatas puede ser declarada como primaria, utilizando la restricción **PRIMARY KEY**. Revisemos nuestra definición de la table Estudiantes, especificando ahora la restricción de llave:\n",
     "\n",
-    "> CREATE TABLE Estudiantes(id CHAR(20), nombre CHAR(30), login CHAR(20), edad INTEGER, promedio REAL,<br> \n",
+    "> CREATE TABLE Estudiantes(id CHAR(20), nombre VARCHAR(30), login CHAR(20), edad INTEGER, promedio REAL,<br> \n",
     "> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;UNIQUE(nombre, edad), CONSTRAINT LlaveEstudiante PRIMARY KEY(id))\n",
     "\n",
     "Esta definición indica que **id** es la llave primaria y la combinación de nombre y edad es también una llave. La definición de la llave primaria también ilustra cómo podemos nombrar una restricción precediéndola con **CONSTRAINT**, lo que permite que, si se viola la restricción, se devuelve el nombre de la restricción y se puede utilizar para identificar el error más fácilmente.\n",
@@ -190,15 +196,6 @@
     "\n",
     "Existen multiples patrones de strings que pueden verificarse, no solo patrones de inicio. Más información sobre esto puede encontrarse [acá](https://www.w3schools.com/sql/sql_like.asp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
