--- a/Clases/Sesión 08/01 - Bases de datos relacionales.ipynb
+++ b/Clases/Sesión 08/01 - Bases de datos relacionales.ipynb
@@ -44,6 +44,7 @@
     "Una base de datos relacional es una colección de relaciones con nombres distintos. El esquema de base de datos relacional (database schema) es la colección de esquemas para las relaciones en la base de datos. Por ejemplo, una base de datos universitaria podría estar compuesta por las siguiente relaciones:\n",
     "\n",
     "* Estudiantes(id: STRING, nombre: STRING, login: STRING, edad: INTEGER, promedio: REAL)\n",
+    "* Estudiantes_Postgrado(id: STRING, nombre: STRING)\n",
     "* Facultad(id: STRING, nombre: STRING)\n",
     "* Cursos(id: STRING, nombre: STRING, creditos: INTEGER)\n",
     "* Salas(codigo: STRING, ubicacion: STRING, capacidad: INTEGER)\n",
@@ -100,15 +101,6 @@
     "\n",
     "La restricción de integridad que los estudiantes deben ser mayores de cierta edad, puede ser pensada como una restricción de dominio extendida, ya que estamos esencialmente definiendo el conjunto de valores de edad permisible más estrictamente de lo que es posible simplemente usando un dominio estándar de *INTEGER*. En general, sin embargo, se pueden especificar restricciones que van más allá de restricciones de dominios, llaves o llaves foráneas. Por ejemplo, podríamos requerir que cada estudiante cuya edad sea mayor que 18 debe tener un promedio mayor que 4. Los sistemas actuales de bases de datos relacionales apoyan tales restricciones generales en forma de restricciones y aserciones de tabla. Las restricciones de tablas se asocian con una sola tabla y se comprueban cada vez que se modifica dicha tabla. En contraste, las aserciones implican varias tablas y se comprueban cuando se modifica cualquiera de estas tablas."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
