--- a/Clases/Sesión 08/02 - SQL.ipynb
+++ b/Clases/Sesión 08/02 - SQL.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "La siguiente consulta agrega una restricción simple a la consulta anterior:\n",
     "\n",
-    "> SELECT *\n",
+    "> SELECT * <br>\n",
     "> FROM Estudiantes E <br>\n",
     "> WHERE E.promedio > 5.0\n",
     "\n",
