--- a/Clases/Sesión 08/03 - Acceso a bases de datos con Python.ipynb
+++ b/Clases/Sesión 08/03 - Acceso a bases de datos con Python.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -70,11 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 'name', 'TEXT', 0, None, 0), (1, 'continent', 'TEXT', 0, None, 0), (2, 'population', 'INTEGER', 0, None, 0), (3, 'language', 'TEXT', 0, None, 0)]\n"
+     ]
+    }
+   ],
    "source": [
     "cursor.execute('PRAGMA table_info([countries])')\n",
     "print(cursor.fetchall())\n",
@@ -115,11 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Andorra', 'Europe', 77281, 'Catalan')\n"
+     ]
+    }
+   ],
    "source": [
     "connection = sqlite3.connect('example.db')\n",
     "cursor = connection.cursor()\n",
