Update and rename 05 - Búsqueda con A*.ipynb to 05 - Búsqueda con A estrella.ipynb

--- a/Material de Clases/Capítulo 4/05 - Búsqueda con A estrella.ipynb
+++ b/Material de Clases/Capítulo 4/05 - Búsqueda con A estrella.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Para evitar este tipo de situaciones, el algoritmo $A^*$ introduce una heurística en el algoritmo de búsqueda en grafos tradicional, esencialmente planeando en cada paso para que se tome la decisión óptima. Con $A^*$, un robot encontraría una ruta de una manera similar al diagrama a continuación.\n",
     "\n",
-    "<img src=\"figs/A*_search.png\" style=\"width: 400px;\"/>"
+    "<img src=\"figs/A estrella_search.png\" style=\"width: 400px;\"/>"
    ]
   },
   {
@@ -43,7 +43,7 @@
     "*$g(n)=$ cost acumulado de llegar a $n$.\n",
     "*$h(n)=$ costo estimado de ir desde $n$ al nodo de destino. Esta es la parte heurística de la función de costo.\n",
     "\n",
-    "<img src=\"figs/A*_grid.png\" style=\"width: 500px;\"/>\n",
+    "<img src=\"figs/A estrella_grid.png\" style=\"width: 500px;\"/>\n",
     "\n",
     "En la grilla de arriba, $A^*$ comienza  en el nodo rojo y considera todas las celdas adyacentes. Una vez que la lista de celdas adyacentes ha sido poblada, filtra aquellas que son inaccesibles (muros, obstáculos, fuera de límites). A continuación, selecciona la celda con el costo más bajo, que es el valor de $f(n)$ estimado. Este proceso se repite recursivamente hasta que se haya encontrado el camino más corto hasta el objetivo (nodo azul). El cálculo de $f(n)$ se realiza a través de una heurística que generalmente da buenos resultados.\n",
     "\n",
@@ -119,11 +119,11 @@
     "## Ejemplo de aplicación\n",
     "Use $A^*$ para encontrar la ruta más corta desde el cuadrado verde al cuadrado amarillo en la grilla de abajo.\n",
     "\n",
-    "<img src=\"figs/A*_map.png\" style=\"width: 400px;\"/>\n",
+    "<img src=\"figs/A estrella_map.png\" style=\"width: 400px;\"/>\n",
     "\n",
     "Comencemos por elegir una heurística admisible. Para este caso, podemos usar la distancia de Manhattan. Luego procedemos a la celda inicial. La llamamos nuestra `celda actual` y luego procedemos a mirar a todos sus vecinos y calculamos $f, g\\text{ y } h$ para cada uno de ellos. Luego seleccionamos el vecino con el menor costo $f$. Esta es nuestra nueva `celda actual` y luego repetimos el proceso anterior (expandir los vecinos y calcular $f,g \\text{ y } h$, y elegir el más bajo). Hacemos esto hasta que estemos en la celda de objetivo. La siguiente imagen muestra cómo se realiza la búsqueda. En cada celda, se muestran los valores respectivos de $f,g \\text{ y } h$. Recuerde $g$ es el costo que se ha acumulado al llegar a la celda y $h$ es la distancia de Manhattan hacia la celda amarilla, mientras que $f$ es la suma de $g$ y $h$.\n",
     "\n",
-    "<img src=\"figs/A*_example.gif\" style=\"width: 400px;\"/>"
+    "<img src=\"figs/A estrella_example.gif\" style=\"width: 400px;\"/>"
    ]
   }
  ],
