--- a/Material de Clases/Capítulo 5/02 - SQL.ipynb
+++ b/Material de Clases/Capítulo 5/02 - SQL.ipynb
@@ -151,7 +151,7 @@
     "> FROM Estudiantes E  <br>\n",
     "> WHERE E.nombre LIKE 'MA%'\n",
     "\n",
-    "Existen multiples patrones de strings que pueden verificarse, no solo patrones de inicio. Más información sobre esto puede encontrarse [acá](https://www.w3schools.com/sql/sql_like.asp)\n",
+    "Existen multiples patrones de strings que pueden verificarse, no solo patrones de inicio. Más información sobre esto puede encontrarse [acá](https://www.w3schools.com/sql/sql_like.asp).\n",
     "\n",
     "### Manipulación y comparación de conjuntos\n",
     "SQL proporciona también constructos de manipulación y comparación de conjuntos que extienden las consultas básicas presentadas anteriormente. Como la respuesta a una consulta es un conjunto de múltiples filas, es\n",
@@ -189,7 +189,7 @@
     "> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;FROM Inscritos I <br>\n",
     "> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;WHERE I.id_curso = 'IIC2115' AND I.id_estudiante = E.id)\n",
     "\n",
-    "Esta consulta también ilustra el uso del símbolo * en situaciones donde todo lo que queremos hacer es verificar que exista una cierta fila, y realmente no queremos recuperar ninguna columna de la fila. Este es uno de los pocos usos de * en la cláusula SELECT que se considera un buen estilo de programación.\n",
+    "Esta consulta también ilustra el uso del símbolo * en situaciones donde todo lo que queremos hacer es verificar que exista una cierta fila, y realmente no queremos recuperar ninguna columna de la fila. Este es uno de los pocos usos de $*$ en la cláusula SELECT que se considera un buen estilo de programación.\n",
     "\n",
     "La comparación de conjuntos sigue un esquema bastante similar. Por ejemplo, si buscamos los alumnos cuyo promedio es superior al de todos los alumnos de nombre José, podemos utilizar la siguiente consulta anidada:\n",
     "\n",
@@ -243,13 +243,6 @@
     "\n",
     "SQL proporciona un valor de columna especial llamado **NULL** para usar en tales situaciones. Se utiliza este valor cuando el contenido de la columna sea desconocido o inaplicable. Para verificar la existencia de un valor **NULL**, SQL proporciona el operador de comparación **IS NULL**."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
